<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".BottomSheets.VentasBottomSheet">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/btn_cerrar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:background="@color/blanco"
                android:src="@drawable/ic_close_black_24dp"
                android:contentDescription="@string/icon"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/agregar_cliente"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/guardar_mayus"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_ventas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/datos_generales"
                android:textColor="@android:color/black"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_user_24dp"
                    android:contentDescription="@string/icon"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lytNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/icon"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/nombre"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtNombre"
                        android:inputType="textCapSentences"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lytApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/apellidos"
                android:paddingStart="56dp"
                android:paddingEnd="16dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtApellidos"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="22dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_phone_24dp"
                android:contentDescription="@string/icon"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lytTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/icon2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/telefono"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtTelefono"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lytPseudonimo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="Pseudónimo"
                android:paddingStart="56dp"
                android:paddingEnd="16dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPseudonimo"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/direccion"
                android:textColor="@android:color/black"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="22dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_location_24dp"
                android:contentDescription="@string/icon"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lytCalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/icon3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/calle"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtCalle"
                        android:inputType="textCapSentences"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon4"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="22dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_numbers_24dp"
                android:contentDescription="@string/icon"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lytNumeroExterior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/icon4"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/numero_exterior"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtNumeroExterior"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lytNumeroInterior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/numero_interior"
                android:paddingStart="56dp"
                android:paddingEnd="16dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNumeroInterior"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon5"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="22dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_home_city_24dp"
                android:contentDescription="@string/icon"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lytZona"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/icon5"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/colonia"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtZona"
                        android:inputType="textCapSentences"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <Switch
                android:id="@+id/sPrecios"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:text="Precios preferenciales"/>

            <LinearLayout
                android:id="@+id/lytProductos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>